AC_INIT([G],[0.0])
AC_CONFIG_SRCDIR(src/main.c)

AC_PROG_CC
AC_PROG_MKDIR_P
PKG_CHECK_MODULES(LUA,lua)
PKG_CHECK_MODULES(SDL2,sdl2)
PKG_CHECK_MODULES(SDL2_IMG,SDL2_image)
CFLAGS="$CFLAGS $LUA_CFLAGS $SDL2_CFLAGS"
LDFLAGS="$LDFLAGS $LUA_LIBS $SDL2_LIBS $SDL2_IMG_LIBS"

AC_CONFIG_FILES(Makefile)
AC_CONFIG_FILES(tests/Makefile)

AC_OUTPUT
